// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ChannelListItem] rendering test renders "renderSingleImage" as expected 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="Go to chat"
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#151C22",
              "borderBottomColor": "#515151",
              "borderBottomWidth": 0.3,
              "borderLeftColor": "#515151",
              "borderRightColor": "#515151",
              "borderTopColor": "#515151",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 92,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 50,
                "justifyContent": "center",
                "width": 50,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "height": 44,
                  "width": 44,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://picsum.photos/200",
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 24,
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "borderBottomColor": "#fff",
                  "borderBottomLeftRadius": 6,
                  "borderBottomRightRadius": 6,
                  "borderBottomWidth": 2,
                  "borderLeftColor": "#fff",
                  "borderLeftWidth": 2,
                  "borderRightColor": "#fff",
                  "borderRightWidth": 2,
                  "borderTopColor": "#fff",
                  "borderTopLeftRadius": 6,
                  "borderTopRightRadius": 6,
                  "borderTopWidth": 2,
                  "bottom": 0,
                  "height": 12,
                  "position": "absolute",
                  "right": 0,
                  "width": 12,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "paddingRight": 20,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#515151",
                      "borderBottomLeftRadius": 8,
                      "borderBottomRightRadius": 8,
                      "borderTopLeftRadius": 8,
                      "borderTopRightRadius": 8,
                      "height": 16,
                      "justifyContent": "center",
                      "marginRight": 5,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 14,
                      },
                      Object {
                        "fontSize": 10,
                        "fontWeight": "bold",
                      },
                    ]
                  }
                >
                  Me
                </Text>
              </View>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontSize": 14,
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                Unnamed
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 8,
                },
                undefined,
              ]
            }
          >
            <Text
              lastMessageCnt={0}
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 12,
                    "maxWidth": 200,
                  },
                  undefined,
                ]
              }
            >
              How are you doing?
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 12,
                    "textAlign": "right",
                  },
                  undefined,
                ]
              }
            >
              3 years ago
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`[ChannelListItem] rendering test renders "renderSingleImage" without photoURL as expected 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="Go to chat"
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#151C22",
              "borderBottomColor": "#515151",
              "borderBottomWidth": 0.3,
              "borderLeftColor": "#515151",
              "borderRightColor": "#515151",
              "borderTopColor": "#515151",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 92,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 50,
                "justifyContent": "center",
                "width": 50,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "height": 44,
                  "width": 44,
                }
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "canInstrument": true,
                      "createTransformer": [Function],
                      "getCacheKey": [Function],
                      "process": [Function],
                    }
                  }
                  style={
                    Object {
                      "borderRadius": 24,
                      "height": 48,
                      "width": 48,
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View />
        </View>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "paddingRight": 20,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#515151",
                      "borderBottomLeftRadius": 8,
                      "borderBottomRightRadius": 8,
                      "borderTopLeftRadius": 8,
                      "borderTopRightRadius": 8,
                      "height": 16,
                      "justifyContent": "center",
                      "marginRight": 5,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 14,
                      },
                      Object {
                        "fontSize": 10,
                        "fontWeight": "bold",
                      },
                    ]
                  }
                >
                  Me
                </Text>
              </View>
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontSize": 14,
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                Unnamed
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 8,
                },
                undefined,
              ]
            }
          >
            <Text
              lastMessageCnt={0}
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 12,
                    "maxWidth": 200,
                  },
                  undefined,
                ]
              }
            >
              How are you doing?
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 12,
                    "textAlign": "right",
                  },
                  undefined,
                ]
              }
            >
              3 years ago
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`[ChannelListItem] rendering test renders as expected 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <View
      accessibilityLabel="Go to chat"
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#151C22",
              "borderBottomColor": "#515151",
              "borderBottomWidth": 0.3,
              "borderLeftColor": "#515151",
              "borderRightColor": "#515151",
              "borderTopColor": "#515151",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 92,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 50,
                "justifyContent": "center",
                "width": 50,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                  "height": 44,
                  "width": 44,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "flexWrap": "wrap",
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://picsum.photos/200",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderBottomLeftRadius": 10,
                        "borderBottomRightRadius": 10,
                        "borderTopLeftRadius": 10,
                        "borderTopRightRadius": 10,
                        "height": 20,
                        "marginBottom": 2,
                        "marginRight": 2,
                        "width": 20,
                      },
                      Object {
                        "borderRadius": 10,
                        "height": 20,
                        "marginTop": 2,
                        "width": 20,
                      },
                    ]
                  }
                />
                <Image
                  source={
                    Object {
                      "uri": "https://picsum.photos/200",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderBottomLeftRadius": 10,
                        "borderBottomRightRadius": 10,
                        "borderTopLeftRadius": 10,
                        "borderTopRightRadius": 10,
                        "height": 20,
                        "marginBottom": 2,
                        "marginRight": 2,
                        "width": 20,
                      },
                      Object {
                        "borderRadius": 10,
                        "height": 20,
                        "marginTop": 2,
                        "width": 20,
                      },
                    ]
                  }
                />
                <Image
                  source={
                    Object {
                      "uri": "https://picsum.photos/201",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderBottomLeftRadius": 10,
                        "borderBottomRightRadius": 10,
                        "borderTopLeftRadius": 10,
                        "borderTopRightRadius": 10,
                        "height": 20,
                        "marginBottom": 2,
                        "marginRight": 2,
                        "width": 20,
                      },
                      Object {
                        "borderRadius": 10,
                        "height": 20,
                        "marginTop": 2,
                        "width": 20,
                      },
                    ]
                  }
                />
                <Image
                  source={
                    Object {
                      "canInstrument": true,
                      "createTransformer": [Function],
                      "getCacheKey": [Function],
                      "process": [Function],
                    }
                  }
                  style={
                    Array [
                      Object {
                        "borderBottomLeftRadius": 10,
                        "borderBottomRightRadius": 10,
                        "borderTopLeftRadius": 10,
                        "borderTopRightRadius": 10,
                        "height": 20,
                        "marginBottom": 2,
                        "marginRight": 2,
                        "width": 20,
                      },
                      Object {
                        "borderRadius": 10,
                        "height": 20,
                        "marginTop": 2,
                        "width": 20,
                      },
                    ]
                  }
                />
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00D4AB",
                    "borderBottomLeftRadius": 10,
                    "borderBottomRightRadius": 10,
                    "borderTopLeftRadius": 10,
                    "borderTopRightRadius": 10,
                    "bottom": -10,
                    "height": 20,
                    "justifyContent": "center",
                    "marginBottom": 2,
                    "marginRight": 2,
                    "paddingLeft": 5,
                    "paddingRight": 5,
                    "position": "absolute",
                    "right": -5,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 10,
                      "fontWeight": "bold",
                    },
                    undefined,
                  ]
                }
              >
                +1
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#fff",
                  "borderBottomColor": "#fff",
                  "borderBottomLeftRadius": 6,
                  "borderBottomRightRadius": 6,
                  "borderBottomWidth": 2,
                  "borderLeftColor": "#fff",
                  "borderLeftWidth": 2,
                  "borderRightColor": "#fff",
                  "borderRightWidth": 2,
                  "borderTopColor": "#fff",
                  "borderTopLeftRadius": 6,
                  "borderTopRightRadius": 6,
                  "borderTopWidth": 2,
                  "bottom": 0,
                  "height": 12,
                  "position": "absolute",
                  "right": 0,
                  "width": 12,
                },
                undefined,
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexDirection": "column",
                "flexGrow": 1,
                "flexShrink": 1,
                "paddingRight": 20,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
                undefined,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "flex-start",
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={2}
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontSize": 14,
                    },
                    Object {
                      "fontWeight": "bold",
                    },
                  ]
                }
              >
                , , , , 
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#00D4AB",
                    "borderBottomLeftRadius": 8,
                    "borderBottomRightRadius": 8,
                    "borderTopLeftRadius": 8,
                    "borderTopRightRadius": 8,
                    "height": 16,
                    "justifyContent": "center",
                    "width": 16,
                  },
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#fff",
                      "fontSize": 10,
                    },
                    undefined,
                  ]
                }
              >
                3
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginTop": 8,
                },
                undefined,
              ]
            }
          >
            <Text
              lastMessageCnt={3}
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 12,
                    "fontWeight": "bold",
                    "maxWidth": 200,
                  },
                  undefined,
                ]
              }
            >
              How are you doing?
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 12,
                    "textAlign": "right",
                  },
                  undefined,
                ]
              }
            >
              3 years ago
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`[ChannelListItem] rendering test renders when channelType is public 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View />
</RNCSafeAreaProvider>
`;
